--- a/app/notes/filter/@sidebar/SidebarNotes/SidebarNotes.module.css
+++ b/app/notes/filter/@sidebar/SidebarNotes/SidebarNotes.module.css
@@ -10,7 +10,7 @@
 
 .menuLink {
   text-decoration: none;
-  color: white;
+  color: black;
   font-size: 16px;
   display: block;
   padding: 8px 16px;
